# Renewal

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.cfg
backend/docker/: Dockerfile  README.md  docker-compose.yml  feeds.json  init.sh
backend/renewal_backend/: agent.py  cli.py  config.py  controller.py  mongodb.py  schemas.py  scraper.py  user.py  utils.py
backend/renewal_backend/crawlers/: article.py  feed.py  image.py  resource.py
backend/renewal_backend/utils/: __init__.py  click.py  patch_local.py
backend/renewal_backend/web/: __init__.py  __main__.py  auth.py  utils.py  websocket.py
backend/renewal_backend/web/api/: __init__.py  event.py  recsystems.py  v1.py
core/: README.md
mobileapp/: .gitignore  App.js  README.md  app.config.js  app.json  babel.config.js  config.js  package-lock.json  package.json
mobileapp/misc/: extract_sources.py  patch_local.py
newsagg/: .gitignore  README.md  requirements.txt  setup.cfg
newsagg/newssourceaggregator/: __init__.py  api.py  controller.py  newsreceiver.py  newssourceagent.py  parser.py  rssFeedPlug.py  rssparser.py  sqlalchemy_declarative.py  utils.py
newsagg/newssourceaggregator/data/: rss_urls.csv
newsagg/newssourceaggregator/databasetools/: __init__.py  mongo.py
newsagg/newssourceaggregator/prototypes/: baseline.py  requestdispatcher.py  systeminterface.py
newsagg/newssourceaggregator/test/: api_app.py  authentication.py  geturls.py
recsystems/: Dockerfile  README.md  baseline.py  requirements.txt
website/: README.md
(+79 files in other folders)
