[metadata]
name = renewal-backend
version = attr: renewal_backend.__version__

[options]
python_requires = >= 3.6
packages = find:

[options.extras_require]
# In order to better minimize dependencies depending on which service we are
# deploying, many depenencies will be installed using extras.  For example,
# only the HTTP API service requires flask, so when deploying that service we
# would run `pip install renewal-backend[http-api]`, for example.
http-api = flask

[tool:pytest]
addopts = --doctest-modules
doctest_optionflags = ELLIPSIS
