[metadata]
name = renewal-newsagg
version = attr: newssourceaggregator.__version__

[options]
python_requires = >= 3.6
packages = newssourceaggregator

# Note: In practice this install_requires may be more flexible; this just
# reflects the known-good requirements installed during development.
install_requires = 
    bson
    feedparser
    flask
    flask-restful
    passlib
    pika
    pymongo
    sqlalchemy
    rabbitmq-admin
    databasetools
    datastructuretools
    systemtools

dependency_links =
    git+https://github.com/hayj/DatabaseTools.git#egg=databasetools
    git+https://github.com/hayj/DataStructureTools.git#egg=datastructuretools
    git+https://github.com/hayj/SystemTools.git#egg=systemtools

[options.package_data]
newssourceaggregator = data/*.csv data/*.json
